tests/custom/crash_compatible.p.errors
ERROR: line 15: cannot have a recursive data structure
ERROR: line 20: cannot have a recursive data structure
